<resources>
	<string name="app_name">MedROAD</string>

	<string name="action_settings">Settings</string>
	<string name="ecg_label">ECG: BPM</string>
	<string name="bp_mmhg_label">NIBP: mmHg</string>
	<string name="spo2_label">SpO2: %</string>
	<string name="date_of_birth">DOB:</string>
	<string name="unknown">Unknown</string>
	<string name="gender">Gender:</string>
	<string name="ahcn">AHCN:</string>
	<string name="dummy_ahcn">12345 – 1234</string>
	<string name="dummy_name">John Doe</string>
	<string name="diastolic">Diastolic</string>
	<string name="systolic">Systolic</string>
	<string name="placeholder_data_reading">\u2014</string>
	<string name="not_connected">Not connected!</string>
	<string name="connected">Connected!</string>
	<string name="map_label">MAP</string>
	<string name="patient_name_label">Name:</string>
	<string name="ahcn_label">AHCN:</string>
	<string name="dob_label">DOB:</string>
	<string name="physician_label">Physician:</string>
	<string name="id_label">Patient ID</string>
	<string name="config_title">Configuration</string>
	<string name="ecg_device_label">ECG Device:</string>
	<string name="nibp_device_label">NIBP Device:</string>
	<string name="spo2_device_label">SpO2 Device:</string>
	<string name="refresh_label">Refresh</string>
	<string name="placeholder_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
	<string name="session_id_label">Session #</string>
	<string name="patient_information_title">Patient Information</string>
	<string name="new_patient_button">New Patient</string>
	<string name="find_patient_button">Find a Patient</string>
	<string-array name="Genders">
		<item>Male</item>
		<item>Female</item>
		<item>Other</item>
	</string-array>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
