<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context="ca.ualberta.medroad.view.fragment.PatientInfoFragment">

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:stretchColumns="true">

		<TableRow
			android:padding="@dimen/margin_less">

			<TextView
				android:paddingStart="@dimen/margin"
				android:paddingEnd="@dimen/margin"
				android:text="@string/patient_name_label"
				android:labelFor="@+id/f_patient_info_name"/>

			<EditText
				android:id="@+id/f_patient_info_name"
				android:inputType="number"
				android:text="@string/dummy_name"
				android:padding="@dimen/margin_less"/>

		</TableRow>

		<TableRow
			android:padding="@dimen/margin_less">

			<TextView
				android:paddingStart="@dimen/margin"
				android:paddingEnd="@dimen/margin"
				android:text="@string/ahcn"
				android:labelFor="@+id/f_patient_info_ahcn"/>

			<EditText
				android:id="@+id/f_patient_info_ahcn"
				android:inputType="number"
				android:text="@string/dummy_ahcn"
				android:padding="@dimen/margin_less"/>

		</TableRow>

		<TableRow
			android:padding="@dimen/margin_less">

			<TextView
				android:paddingStart="@dimen/margin"
				android:paddingEnd="@dimen/margin"
				android:text="@string/date_of_birth"
				android:labelFor="@+id/f_patient_info_dob"/>

			<EditText
				android:id="@+id/f_patient_info_dob"
				android:inputType="date"
				android:text="@string/unknown"
				android:padding="@dimen/margin_less"/>

			<TextView
				android:id="@+id/f_patient_info_age"
				tools:text="Age Unknown"/>

		</TableRow>

		<TableRow
			android:padding="@dimen/margin_less">

			<TextView
				android:paddingStart="@dimen/margin"
				android:paddingEnd="@dimen/margin"
				android:text="@string/gender"
				android:labelFor="@+id/f_patient_info_gender"/>

			<Spinner
				android:entries="@array/Genders"
				android:paddingTop="@dimen/margin_less"
				android:paddingBottom="@dimen/margin_less"/>

		</TableRow>

	</TableLayout>

	<ListView
		android:id="@+id/f_patient_info_list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:divider="@null"
		tools:listheader="@layout/list_item_alert"
		tools:listitem="@layout/list_item_patient_info"/>

</LinearLayout>
