<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context="ca.ualberta.medroad.view.fragment.ConfigurationFragment">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/margin"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/config_title"/>

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/margin"
		android:paddingRight="@dimen/margin">

		<TableRow
			android:padding="@dimen/margin_less">

			<TextView
				android:padding="@dimen/margin_less"
				android:layout_gravity="center"
				android:text="@string/ecg_device_label"/>

			<ImageButton
				android:id="@+id/f_config_ecg_button"
				android:src="@drawable/ic_refresh_dark"
				android:background="?android:attr/selectableItemBackground"
				android:padding="@dimen/margin"
				android:layout_gravity="center"/>

			<Spinner
				android:id="@+id/f_config_ecg_device"/>

		</TableRow>

		<TableRow
			android:padding="@dimen/margin_less">

			<TextView
				android:padding="@dimen/margin_less"
				android:layout_gravity="center"
				android:text="@string/nibp_device_label"/>

			<ImageButton
				android:id="@+id/f_config_bp_button"
				android:src="@drawable/ic_refresh_dark"
				android:background="?android:attr/selectableItemBackground"
				android:padding="@dimen/margin"
				android:layout_gravity="center"/>

			<Spinner
				android:id="@+id/f_config_bp_device"/>

		</TableRow>

		<TableRow
			android:padding="@dimen/margin_less">

			<TextView
				android:padding="@dimen/margin_less"
				android:layout_gravity="center"
				android:text="@string/spo2_device_label"/>

			<ImageButton
				android:id="@+id/f_config_o2_button"
				android:src="@drawable/ic_refresh_dark"
				android:background="?android:attr/selectableItemBackground"
				android:padding="@dimen/margin"
				android:layout_gravity="center"/>

			<Spinner
				android:id="@+id/f_config_o2_device"/>

		</TableRow>

	</TableLayout>

</LinearLayout>
